modify SQL native syntax on Django ORM transaction

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
-SECRET_KEY=HUYPIZDA
+NGROK=https://8e5c-217-76-10-136.eu.ngrok.io
+SECRET_KEY=django-insecure-js@8r$lh*%@=rerl@o$0hes+15i9tz3ymwvds!jmjq%e(#$#jg
+DB_PASSWORD=polkabulok56
+EMAIL_HOST_USER=romashov.dmitry.py@gmail.com
+EMAIL_HOST_PASSWORD=tprwivknyklcruqh
+TELEGRAM_TOKEN=5630063573:AAGMtKDZiz8Eigwkw8JZXJR2F2yEIM-U6rQ
+
+# DON'T TOUCH FOR ANY REASON
+PASSWORD_START=b1j8x
+PASSWORD_FINISH=n9fkxnmz72
