untrack files contained in the .gitignore file

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NGROK=https://8e5c-217-76-10-136.eu.ngrok.io
+NGROK=https://0bd0-217-76-15-113.eu.ngrok.io
 SECRET_KEY=django-insecure-js@8r$lh*%@=rerl@o$0hes+15i9tz3ymwvds!jmjq%e(#$#jg
 DB_PASSWORD=polkabulok56
 EMAIL_HOST_USER=romashov.dmitry.py@gmail.com
