update docker-compose yml and add logs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
             sh -c "python manage.py makemigrations users &&
                    python manage.py makemigrations table &&
                    python manage.py migrate &&
+                   python make_webhook_firstly.py &&
                    python manage.py runserver 0.0.0.0:8000"
         volumes:
             - .:/usr/src/app
