--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -6,9 +6,16 @@ on:
       - master
 
 jobs:
-  my_test:
+  make_env:
+    name: make_env
     runs-on: ubuntu-latest
-    
     steps:
-      - name: print hallo
-        run: echo 'hue pezda'
+          - name: Checkout
+            uses: actions/checkout@v2
+            with:
+              ref: 'master'
+          - name: Make envfile
+            run: export > .env
+            env:
+                TEST_SECRET: ${{ secrets.DB_PASSWORD }}
+          - run: scp -o StrictHostKeyChecking=no -i ${{ secrets.SSH_KEY }} .env ${{ secrets.SSH_ROLE }}@;{{ secrets.SSH_IP_ADRESS }}:/home/.env
