--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -11,6 +11,6 @@ jobs:
       with:
         host: ${{ secrets.SSH_IP_ADRESS }}
         username: ${{ secrets.REMOTE_ROLE }}
-        password: ${{ secrets.SSH_PASSPHRASE }}
+        password: ${{ secrets.SSH_PASSWORD }}
         port: ${{ secrets.SSH_PORT }}
         script: whoami
