--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -13,4 +13,4 @@ jobs:
         username: ${{ secrets.REMOTE_ROLE }}
         password: ${{ secrets.SSH_PASSWORD }}
         port: ${{ secrets.SSH_PORT }}
-        script: whoami
+        script: echo 'hello world'
