--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -6,23 +6,14 @@ on:
       - master
 
 jobs:
-  send-file:
+  build:
     runs-on: ubuntu-latest
     
     steps:
-      - name: huepezda
-        run: echo ${{ secrets.SSH_IP_ADRESS }}
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
-      - name: pezdahue
-        run: echo ${{ env.SSH_PRIVATE_KEY }}
-
-      - name: Set up SSH key
-        uses: webfactory/ssh-agent@v0.5.0
-        with:
-          ssh-private-key: ${{ env.SSH_PRIVATE_KEY }}
-          
-      - name: Create file
-        run: echo "hello world" > file.txt
-        
-      - name: Copy file to remote server
-        run: scp -i ${{ env.SSH_PRIVATE_KEY }} file.txt root@${{ secrets.SSH_IP_ADRESS }}:/etc/file.txt
+    - name: Create and Copy File
+      run: |
+        echo "Hello world" > hello.txt
+        scp -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} hello.txt ${{ secrets.EMAIL_HOST_USER }}@${{ secrets.SSH_IP_ADRESS }}:/root
