--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -9,8 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      SSH_KEY_PATH: /tmp/ssh_key
-    
+      SSH_KEY_PATH: /tmp/ssh_key    
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
@@ -18,5 +17,5 @@ jobs:
     - name: Create and Copy File
       run: |
         echo "Hello world" > hello.txt
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ${{ env.SSH_KEY_PATH }} && chmod 600 ${{ env.SSH_KEY_PATH }}
+        echo "${{ secrets.SSH_PUBLIC_KEY }}" > ${{ env.SSH_KEY_PATH }} && chmod 600 ${{ env.SSH_KEY_PATH }}
         scp -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} hello.txt ${{ secrets.REMOTE_ROLE }}@${{ secrets.SSH_IP_ADRESS }}:80:/
