--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Set up SSH key
         uses: webfactory/ssh-agent@v0.7.0
         with:
-          ssh-private-key: ${{ secrets.SSH_PUBLIC_KEY }}
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
