--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -18,14 +18,14 @@ jobs:
       # Deploy
       - run: cd static && rsync -e "ssh -p 20022 -i $HOME/.ssh/key -o StrictHostKeyChecking=no" --archive --compress . root@1507839-cy37741.tw1.ru
   build:
-    name: Build
+    name: executing remote ssh commands using ssh key
     runs-on: ubuntu-latest
     steps:
-    - name: executing remote ssh commands using password
-      uses: appleboy/ssh-action@v0.1.10
-      with:
-        host: 1507839-cy37741.tw1.ru
-        username: root
-        password: ${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }}
-        port: 22
-        script: whoami
+      - name: pohuy
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: 1507839-cy37741.tw1.ru
+          username: root
+          key: ${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }}
+          port: 22
+          script: whoami
