--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -16,16 +16,16 @@ jobs:
       - run: echo "${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }}" > "$HOME/.ssh/key"
       - run: chmod 600 "$HOME/.ssh/key"
       # Deploy
-      - run: cd static && rsync -e "ssh -p 20022 -i $HOME/.ssh/key -o StrictHostKeyChecking=no" --archive --compress . root@1507839-cy37741.tw1.ru
-  build:
-    name: executing remote ssh commands using ssh key
-    runs-on: ubuntu-latest
-    steps:
-      - name: pohuy
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: 1507839-cy37741.tw1.ru
-          username: root
-          key: ${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }}
-          port: 22
-          script: whoami
+      - run: cd static && rsync -e "ssh -p 22 -i $HOME/.ssh/key -o StrictHostKeyChecking=no" --archive --compress . root@1507839-cy37741.tw1.ru:/root
+#  build:
+#    name: executing remote ssh commands using ssh key
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: pohuy
+#        uses: appleboy/ssh-action@v0.1.10
+#        with:
+#          host: 1507839-cy37741.tw1.ru
+#          username: root
+#          key: ${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }}
+#          port: 22
+#          script: whoami
