--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -19,7 +19,8 @@ jobs:
           port: 22
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
-            ls -al
+                  scp -r "."  root@77.73.132.55:/root/dmitry/git_test_delete
 
 #script: |
-#            scp -r "."  root@77.73.132.55:/root/dmitry/git_test_delete
+#            ls -al
+
