--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -19,7 +19,8 @@ jobs:
           port: 22
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
-                  scp -r "."  root@77.73.132.55:/home
+                  rsync -avz --progress $GITHUB_WORKSPACE/ root@77.73.132.55:/home
+
 
 #script: |
 #            ls -al
