--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -26,6 +26,9 @@ jobs:
           script: |
                   ls -al
                   whoami
+                  pwd
+                  cd ..
+                  pwd
                   rsync -avz --progress $GITHUB_WORKSPACE/ root@77.73.132.55:/
 
 
