scp action appleboy

--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -16,7 +16,8 @@ jobs:
           ref: 'master'
           
       - name: Copy repo files to remote
-        uses: appleboy/ssh-action@master
+#        uses: appleboy/ssh-action@master
+        uses: appleboy/scp-action@v0.1.4
         with:
           host: 77.73.132.55
           username: root
