--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -14,7 +14,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: 'master'
-          
+      - name: Create .env file
+        run: |
+            echo "SECRET_KEY=HUEPEZDA" >> .env
       - name: Copy repo files to remote
 #        uses: appleboy/ssh-action@master
         uses: appleboy/scp-action@v0.1.4
@@ -24,7 +26,7 @@ jobs:
           key: ${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }}
           port: 22
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          source: "static/my.css"
+          source: ".env"
           target: '/home'
 
 # выводило список файлов. не отправляло файлы. 
