--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -16,18 +16,28 @@ jobs:
           ref: 'master'
       - name: Create .env file
         run: |
-            echo "SECRET_KEY=HUEPEZDA" >> .env
+            echo "SECRET_KEY=${SECRET_KEY}" >> .env
+            echo "EMAIL_HOST_USER=${EMAIL_HOST_USER}" >> .env
+            echo "EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}" >> .env
+            echo "HOST=${HOST}" >> .env
+            echo "TELEGRAM_TOKEN=${TELEGRAM_TOKEN}" >> .env
+            echo "DB_PASSWORD=${DB_PASSWORD}" >> .env
+            echo "POSTGRES_USER=${POSTGRES_USER}" >> .env
+            echo "POSTGRES_DB=${POSTGRES_DB}" >> .env
+            echo "PASSWORD_FINISH=${PASSWORD_FINISH}" >> .env
       - name: Copy repo files to remote
-#        uses: appleboy/ssh-action@master
         uses: appleboy/scp-action@v0.1.4
         with:
-          host: 77.73.132.55
+          host: ${ secrets.HOST_IP_ADRESS }
           username: root
           key: ${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }}
           port: 22
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           source: ".env"
           target: '/home'
+
+
+#        uses: appleboy/ssh-action@master
 
 # выводило список файлов. не отправляло файлы. 
 #          script: |
