--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -25,16 +25,21 @@ jobs:
             echo "POSTGRES_USER=${POSTGRES_USER}" >> .env
             echo "POSTGRES_DB=${POSTGRES_DB}" >> .env
             echo "PASSWORD_FINISH=${PASSWORD_FINISH}" >> .env
-      - name: Copy repo files to remote
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${ secrets.HOST_IP_ADRESS }
-          username: root
-          key: ${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }}
-          port: 22
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          source: ".env"
-          target: '/home'
+      - name: Replace file on remote
+        run: |
+          ssh root@${{ secrets.HOST_IP_ADDRESS }} -p 22 -i ${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }} -o "StrictHostKeyChecking=no" "pycab/test.txt /root/dmitry/PYCAB_TIMEWEB/ulala.txt"
+
+# копирует, работает
+#      - name: Copy repo files to remote
+#        uses: appleboy/scp-action@v0.1.4
+#        with:
+#          host: ${ secrets.HOST_IP_ADRESS }
+#          username: root
+#          key: ${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }}
+#          port: 22
+#          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+#          source: ".env"
+#          target: '/home'
 
 
 #        uses: appleboy/ssh-action@master
