--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -26,8 +26,9 @@ jobs:
           key: ${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }}
           port: 22
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          source: ".env"
+          source: "text.txt"
           target: '/home'
+          overwrite: true
 
 # выводило список файлов. не отправляло файлы. 
 #          script: |
