--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@ __pycache__
 pycab_screencast.mp4
 *initial.py
 */migrations
-*log
+*log*
+delete.py
 # screencast of app
 pycab_screencast.mp4
+.env
 
 # file with sql transactions
 table/backendAndTelegram/sql_transactions.py
