--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -10,13 +10,30 @@ jobs:
     name: Copy repo files to remote
     runs-on: ubuntu-latest
     steps:
+      - name: Docker stop
+        uses: appleboy/ssh-action@v0.5.0
+        with:
+          host: 77.73.132.55
+          username: root
+          key: ${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }}
+          port: 22
+          script: |
+            ls -al
       - name: Checkout
         uses: actions/checkout@v2
         with:
           ref: 'master'
       - name: Create .env file
         run: |
-            echo "SECRET_KEY=HUEPEZDA" >> .env
+            echo "SECRET_KEY=${SECRET_KEY}" >> .env
+            echo "EMAIL_HOST_USER=${EMAIL_HOST_USER}" >> .env
+            echo "EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}" >> .env
+            echo "HOST=${HOST}" >> .env
+            echo "TELEGRAM_TOKEN=${TELEGRAM_TOKEN}" >> .env
+            echo "DB_PASSWORD=${DB_PASSWORD}" >> .env
+            echo "POSTGRES_USER=${POSTGRES_USER}" >> .env
+            echo "POSTGRES_DB=${POSTGRES_DB}" >> .env
+            echo "PASSWORD_FINISH=${PASSWORD_FINISH}" >> .env
       - name: Copy repo files to remote
 #        uses: appleboy/ssh-action@master
         uses: appleboy/scp-action@v0.1.4
@@ -44,16 +61,7 @@ jobs:
 
 
 #      - name: Create .env file
-#        run: |
-#            echo "SECRET_KEY=${SECRET_KEY}" >> .env
-#            echo "EMAIL_HOST_USER=${EMAIL_HOST_USER}" >> .env
-#            echo "EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}" >> .env
-#            echo "HOST=${HOST}" >> .env
-#            echo "TELEGRAM_TOKEN=${TELEGRAM_TOKEN}" >> .env
-#            echo "DB_PASSWORD=${DB_PASSWORD}" >> .env
-#            echo "POSTGRES_USER=${POSTGRES_USER}" >> .env
-#            echo "POSTGRES_DB=${POSTGRES_DB}" >> .env
-#            echo "PASSWORD_FINISH=${PASSWORD_FINISH}" >> .env
+
 #      - name: Copy repo files to remote
 #        uses: appleboy/scp-action@v0.1.4
 #        with:
