--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -16,6 +16,7 @@ jobs:
           host: 77.73.132.55
           username: root
           key: ${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           port: 22
           script: |
             ls -al
@@ -41,8 +42,8 @@ jobs:
           host: 77.73.132.55
           username: root
           key: ${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }}
-          port: 22
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          port: 22
           source: "test.txt"
           target: '/home'
           overwrite: true
