--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -46,6 +46,17 @@ jobs:
           source: .
           target: '/root/dmitry/PYCAB_TIMEWEB'
           overwrite: true
+      - name: Copy .env to remote
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: 77.73.132.55
+          username: root
+          key: ${{ secrets.LAST_ONE_SSH_PRIVATE_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          port: 22
+          source: .env
+          target: '/root/dmitry/PYCAB_TIMEWEB'
+          overwrite: true
 
 # выводило список файлов. не отправляло файлы. 
 #          script: |
