--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -26,7 +26,7 @@ jobs:
           ref: 'master'
       - name: Create .env file
         run: |
-            echo "SECRET_KEY=${SECRET_KEY}" >> .env
+            echo "SECRET_KEY=HUEPEZDA" >> .env
             echo "EMAIL_HOST_USER=${EMAIL_HOST_USER}" >> .env
             echo "EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}" >> .env
             echo "HOST=${HOST}" >> .env
