--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -28,13 +28,13 @@ jobs:
         run: |
             echo "SECRET_KEY=HUEPEZDA" >> .env
             echo "EMAIL_HOST_USER=${{ secrets.EMAIL_HOST_USER}}" >> .env
-            echo "EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}" >> .env
-            echo "HOST=${HOST}" >> .env
-            echo "TELEGRAM_TOKEN=${TELEGRAM_TOKEN}" >> .env
-            echo "DB_PASSWORD=${DB_PASSWORD}" >> .env
-            echo "POSTGRES_USER=${POSTGRES_USER}" >> .env
-            echo "POSTGRES_DB=${POSTGRES_DB}" >> .env
-            echo "PASSWORD_FINISH=${PASSWORD_FINISH}" >> .env
+            echo "EMAIL_HOST_PASSWORD=${{ EMAIL_HOST_PASSWORD }}" >> .env
+            echo "HOST=${{ HOST }}" >> .env
+            echo "TELEGRAM_TOKEN=${{ TELEGRAM_TOKEN }}" >> .env
+            echo "DB_PASSWORD=${{ DB_PASSWORD }}" >> .env
+            echo "POSTGRES_USER=${{ POSTGRES_USER }}" >> .env
+            echo "POSTGRES_DB=${{ POSTGRES_DB }}" >> .env
+            echo "PASSWORD_FINISH=${{ PASSWORD_FINISH }}" >> .env
       - name: Copy repo files to remote
         uses: appleboy/scp-action@v0.1.4
         with:
