--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -33,6 +33,7 @@ jobs:
             echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
             echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
             echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
+            echo "PASSWORD_START=${{ secrets.PASSWORD_START }}" >> .env
             echo "PASSWORD_FINISH=${{ secrets.PASSWORD_FINISH }}" >> .env
             echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .env
       - name: Copy repo files to remote
