--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ requests==2.27.1
 celery==5.2.7    
 djangorestframework==3.14.
 python-dotenv==1.0.0
+channels==3.0.4
+daphne==3.0.2
+uwsgi==2.0.22
+asgiref==3.5.2
+channels-redis==3.2.0
