--- a/.github/workflows/pycab-deploy.yml
+++ b/.github/workflows/pycab-deploy.yml
@@ -21,7 +21,7 @@ jobs:
           key: ${{ secrets.POPSO_DELETE_FOR_TEST }}
           # comment just for new push
           script: |
-            ls -all
+            pwd
 
 
     
